--- a/22120269/src/index.css
+++ b/22120269/src/index.css
@@ -1,2 +1,6 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
+
+.animate-fade-in-up {
+    animation: fadeInUp 0.5s ease-out forwards;
+}
